--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="css/icon-font.css" />
+    <!-- <link rel="stylesheet" href="css/icon-font.css" /> -->
 
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
@@ -99,6 +99,7 @@
           </div>
           <div class="col-1-of-2">
             <div class="composition">
+              <!-- Takes care of Density & resolution switching -->
               <img
                 srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w"
                 sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
@@ -106,7 +107,6 @@
                 class="composition__photo composition__photo--p1"
                 src="img/nat-1-large.jpg"
               />
-
               <img
                 srcset="img/nat-2.jpg 300w, img/nat-2-large.jpg 1000w"
                 sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
@@ -114,7 +114,6 @@
                 class="composition__photo composition__photo--p2"
                 src="img/nat-2-large.jpg"
               />
-
               <img
                 srcset="img/nat-3.jpg 300w, img/nat-3-large.jpg 1000w"
                 sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
@@ -122,12 +121,6 @@
                 class="composition__photo composition__photo--p3"
                 src="img/nat-3-large.jpg"
               />
-
-              <!--
-                            <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
-                            <img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
-                            <img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
-                            -->
             </div>
           </div>
         </div>
@@ -445,7 +438,20 @@
 
     <footer class="footer">
       <div class="footer__logo-box">
-        <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo" />
+        <picture class="footer__log">
+          <source
+            srcset="
+              img/logo-green-small-1x.png 1x,
+              img/logo-green-small-2x.png 2x
+            "
+            media="(max-width: 37.5em)"
+          />
+          <img
+            srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x"
+            alt="Full logo"
+            class="footer__logo"
+          />
+        </picture>
       </div>
       <div class="row">
         <div class="col-1-of-2">
